# succinct-scheduling

./: Cargo.toml  README.md  calendar.ics  params.txt  schedule.txt  schedule2.txt
executables/: parse_file
src/: IR.rs  ir.rs  lib.rs  parse_file.rs  parse_leader.rs  parser.rs  repl.rs
src/ir/: ir.rs  mod.rs  parser.rs
