[package]
name = "succinct-scheduling"
version = "0.1.0"
authors = ["Michael Sheely <msheely@hmc.edu>"]

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "parse_file"
path = "src/parse_file.rs" 

[[bin]]
name = "repl"
path = "src/repl.rs"

[[bin]]
name = "leader"
path = "src/parse_leader.rs"

[dependencies]
nom = "^1.2.4"
regex = "0.1"
